# airflow-metaflow-lineage

./: .gitignore  .pre-commit-config.yaml  README.md  assertion_checks.yaml  cdk_app.py  contract_definition.yaml  datahub_utils.ipynb  gx_plugin.py  infra.py  lineage.json  logging_assertions.ipynb  pyproject.toml  run  run.sh  setup-datazone.md  validation_contract.py
airflow/: .gitignore  Dockerfile  docker-compose.datazone.override.yml  docker-compose.yaml  entrypoint.sh  settings.yaml  standalone_admin_password.txt
airflow/dags/: consts.py
airflow/dags/taxi/: dag.py  ingest_dag.py  ingest_taxi_data.py
airflow/dags/taxi/sql/: create_raw_yellow.sql  create_staging_yellow.sql  merge_into_raw_yellow.sql
airflow/dags/weather/: dag.py  ingest_dag.py  ingest_weather_data.py
airflow/dags/weather/sql/: create_raw_weather.sql  create_staging_weather.sql  merge_into_raw_weather.sql
metaflow/: config.yaml  drop_tables.py  prompt.md  train_model_flow.py
metaflow/helpers/: __init__.py  athena.py  data_preparation.py  forecasting.py  openlineage.py  utils.py
metaflow/helpers/sql_openlineage/: athena_extractor.py  example_usage.py  sql.py  sqlparser.py  utils.py
metaflow/sql/: calculate_features.sql  compute_actuals.sql  create_hourly_forecast_table.sql  prepare_training_data.sql  seasonal_naive_forecast.sql  write_forecasts_to_table.sql
openmetadata-docker/: docker-compose-postgres.yml
tools/: example-lineage.json  gx_plugin.py  lineage.json  logging_assertions.ipynb  script.py
