[project]
name = "airflow-metaflow-lineage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
infra = [
    "pulumi-aws>=6.83.0",
]
metaflow = [
    "awswrangler>=3.12.1",
    "jinja2>=3.1.6",
    "metaflow>=2.15.18",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3.0",
    "xgboost>=2.1.4",
]
airflow = [
    "apache-airflow>=3.0.2",
    "apache-airflow-providers-amazon>=9.9.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
